--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     </div>
     <ol id="log">
     </ol>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="https://danott.co/breakpoints/breakpoints.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="//danott.co/breakpoints/breakpoints.js"></script>
     <script>
       jQuery(function(){
         var log, enterMobile, exitMobile, enterTablet, exitTablet, enterDesktop, exitDesktop, breakpoints, logElement;
